[package]
name = "reet"
version = "0.1.0"
authors = ["Hayden Hughes <hayden@foxes.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudflare = "0.7.3"
human-panic = "1.0.3"
log = "0.4.11"
pretty_env_logger = "0.4.0"
canihazip = "2.0.0"
dotenv = "0.15.0"
